Massive Update: Seeded 100 restaurants/1000 items and fixed 403 Forbidden on Admin features